--- a/demo-snippet.ipynb
+++ b/demo-snippet.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "63e42115-30a5-490f-a928-6dd536c67a69",
    "metadata": {},
    "outputs": [],
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 3,
    "id": "335eaa3a-a33f-46f9-b64d-33b21f8ad978",
    "metadata": {},
    "outputs": [],
@@ -199,10 +199,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 8,
    "id": "c5ae33f7-10e1-4246-8e9a-5b55b93799aa",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "GPIOPinInUse",
+     "evalue": "pin GPIO27 is already in use by <gpiozero.DigitalOutputDevice object on pin GPIO27, active_high=True, is_active=True>",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mGPIOPinInUse\u001b[39m                              Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[8]\u001b[39m\u001b[32m, line 6\u001b[39m\n\u001b[32m      3\u001b[39m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[34;01mlib\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m LCD_1inch28\n\u001b[32m      4\u001b[39m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[34;01mPIL\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m Image\n\u001b[32m----> \u001b[39m\u001b[32m6\u001b[39m disp = \u001b[43mLCD_1inch28\u001b[49m\u001b[43m.\u001b[49m\u001b[43mLCD_1inch28\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m      7\u001b[39m disp.Init() \u001b[38;5;66;03m# 点亮屏幕\u001b[39;00m\n\u001b[32m      9\u001b[39m \u001b[38;5;66;03m# Clear display.\u001b[39;00m\n",
+      "\u001b[36mFile \u001b[39m\u001b[32m~/Workspace/lib/lcdconfig.py:47\u001b[39m, in \u001b[36mRaspberryPi.__init__\u001b[39m\u001b[34m(self, spi, spi_freq, rst, dc, bl, bl_freq, i2c, i2c_freq)\u001b[39m\n\u001b[32m     44\u001b[39m \u001b[38;5;28mself\u001b[39m.SPEED  =spi_freq\n\u001b[32m     45\u001b[39m \u001b[38;5;28mself\u001b[39m.BL_freq=bl_freq\n\u001b[32m---> \u001b[39m\u001b[32m47\u001b[39m \u001b[38;5;28mself\u001b[39m.RST_PIN= \u001b[38;5;28;43mself\u001b[39;49m\u001b[43m.\u001b[49m\u001b[43mgpio_mode\u001b[49m\u001b[43m(\u001b[49m\u001b[43mrst\u001b[49m\u001b[43m,\u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[43m.\u001b[49m\u001b[43mOUTPUT\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m     48\u001b[39m \u001b[38;5;28mself\u001b[39m.DC_PIN = \u001b[38;5;28mself\u001b[39m.gpio_mode(dc,\u001b[38;5;28mself\u001b[39m.OUTPUT)\n\u001b[32m     49\u001b[39m \u001b[38;5;28mself\u001b[39m.BL_PIN = \u001b[38;5;28mself\u001b[39m.gpio_pwm(bl)\n",
+      "\u001b[36mFile \u001b[39m\u001b[32m~/Workspace/lib/lcdconfig.py:60\u001b[39m, in \u001b[36mRaspberryPi.gpio_mode\u001b[39m\u001b[34m(self, Pin, Mode, pull_up, active_state)\u001b[39m\n\u001b[32m     58\u001b[39m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[34mgpio_mode\u001b[39m(\u001b[38;5;28mself\u001b[39m,Pin,Mode,pull_up = \u001b[38;5;28;01mNone\u001b[39;00m,active_state = \u001b[38;5;28;01mTrue\u001b[39;00m):\n\u001b[32m     59\u001b[39m     \u001b[38;5;28;01mif\u001b[39;00m Mode:\n\u001b[32m---> \u001b[39m\u001b[32m60\u001b[39m         \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[43mDigitalOutputDevice\u001b[49m\u001b[43m(\u001b[49m\u001b[43mPin\u001b[49m\u001b[43m,\u001b[49m\u001b[43mactive_high\u001b[49m\u001b[43m \u001b[49m\u001b[43m=\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;28;43;01mTrue\u001b[39;49;00m\u001b[43m,\u001b[49m\u001b[43minitial_value\u001b[49m\u001b[43m \u001b[49m\u001b[43m=\u001b[49m\u001b[38;5;28;43;01mFalse\u001b[39;49;00m\u001b[43m)\u001b[49m\n\u001b[32m     61\u001b[39m     \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[32m     62\u001b[39m         \u001b[38;5;28;01mreturn\u001b[39;00m DigitalInputDevice(Pin,pull_up=pull_up,active_state=active_state)\n",
+      "\u001b[36mFile \u001b[39m\u001b[32m/usr/lib/python3/dist-packages/gpiozero/devices.py:108\u001b[39m, in \u001b[36mGPIOMeta.__call__\u001b[39m\u001b[34m(cls, *args, **kwargs)\u001b[39m\n\u001b[32m    105\u001b[39m         \u001b[38;5;28mcls\u001b[39m._instances[key] = weakref.ref(\u001b[38;5;28mself\u001b[39m)\n\u001b[32m    106\u001b[39m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[32m    107\u001b[39m     \u001b[38;5;66;03m# Construct the instance as normal\u001b[39;00m\n\u001b[32m--> \u001b[39m\u001b[32m108\u001b[39m     \u001b[38;5;28mself\u001b[39m = \u001b[38;5;28;43msuper\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\u001b[43m.\u001b[49m\u001b[34;43m__call__\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43m*\u001b[49m\u001b[43margs\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43m*\u001b[49m\u001b[43m*\u001b[49m\u001b[43mkwargs\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m    109\u001b[39m \u001b[38;5;66;03m# At this point __new__ and __init__ have all been run. We now fix the\u001b[39;00m\n\u001b[32m    110\u001b[39m \u001b[38;5;66;03m# set of attributes on the class by dir'ing the instance and creating a\u001b[39;00m\n\u001b[32m    111\u001b[39m \u001b[38;5;66;03m# frozenset of the result called __attrs__ (which is queried by\u001b[39;00m\n\u001b[32m    112\u001b[39m \u001b[38;5;66;03m# GPIOBase.__setattr__). An exception is made for SharedMixin devices\u001b[39;00m\n\u001b[32m    113\u001b[39m \u001b[38;5;66;03m# which can be constructed multiple times, returning the same instance\u001b[39;00m\n\u001b[32m    114\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;28missubclass\u001b[39m(\u001b[38;5;28mcls\u001b[39m, SharedMixin) \u001b[38;5;129;01mor\u001b[39;00m \u001b[38;5;28mself\u001b[39m._refs == \u001b[32m1\u001b[39m:\n",
+      "\u001b[36mFile \u001b[39m\u001b[32m/usr/lib/python3/dist-packages/gpiozero/output_devices.py:192\u001b[39m, in \u001b[36mDigitalOutputDevice.__init__\u001b[39m\u001b[34m(self, pin, active_high, initial_value, pin_factory)\u001b[39m\n\u001b[32m    190\u001b[39m \u001b[38;5;28mself\u001b[39m._blink_thread = \u001b[38;5;28;01mNone\u001b[39;00m\n\u001b[32m    191\u001b[39m \u001b[38;5;28mself\u001b[39m._controller = \u001b[38;5;28;01mNone\u001b[39;00m\n\u001b[32m--> \u001b[39m\u001b[32m192\u001b[39m \u001b[38;5;28;43msuper\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\u001b[43m.\u001b[49m\u001b[34;43m__init__\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43mpin\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mactive_high\u001b[49m\u001b[43m=\u001b[49m\u001b[43mactive_high\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m    193\u001b[39m \u001b[43m                 \u001b[49m\u001b[43minitial_value\u001b[49m\u001b[43m=\u001b[49m\u001b[43minitial_value\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mpin_factory\u001b[49m\u001b[43m=\u001b[49m\u001b[43mpin_factory\u001b[49m\u001b[43m)\u001b[49m\n",
+      "\u001b[36mFile \u001b[39m\u001b[32m/usr/lib/python3/dist-packages/gpiozero/output_devices.py:74\u001b[39m, in \u001b[36mOutputDevice.__init__\u001b[39m\u001b[34m(self, pin, active_high, initial_value, pin_factory)\u001b[39m\n\u001b[32m     72\u001b[39m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[34m__init__\u001b[39m(\u001b[38;5;28mself\u001b[39m, pin=\u001b[38;5;28;01mNone\u001b[39;00m, *, active_high=\u001b[38;5;28;01mTrue\u001b[39;00m, initial_value=\u001b[38;5;28;01mFalse\u001b[39;00m,\n\u001b[32m     73\u001b[39m              pin_factory=\u001b[38;5;28;01mNone\u001b[39;00m):\n\u001b[32m---> \u001b[39m\u001b[32m74\u001b[39m     \u001b[38;5;28;43msuper\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\u001b[43m.\u001b[49m\u001b[34;43m__init__\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43mpin\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mpin_factory\u001b[49m\u001b[43m=\u001b[49m\u001b[43mpin_factory\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m     75\u001b[39m     \u001b[38;5;28mself\u001b[39m._lock = Lock()\n\u001b[32m     76\u001b[39m     \u001b[38;5;28mself\u001b[39m.active_high = active_high\n",
+      "\u001b[36mFile \u001b[39m\u001b[32m/usr/lib/python3/dist-packages/gpiozero/mixins.py:75\u001b[39m, in \u001b[36mSourceMixin.__init__\u001b[39m\u001b[34m(self, *args, **kwargs)\u001b[39m\n\u001b[32m     73\u001b[39m \u001b[38;5;28mself\u001b[39m._source_thread = \u001b[38;5;28;01mNone\u001b[39;00m\n\u001b[32m     74\u001b[39m \u001b[38;5;28mself\u001b[39m._source_delay = \u001b[32m0.01\u001b[39m\n\u001b[32m---> \u001b[39m\u001b[32m75\u001b[39m \u001b[38;5;28;43msuper\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\u001b[43m.\u001b[49m\u001b[34;43m__init__\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43m*\u001b[49m\u001b[43margs\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43m*\u001b[49m\u001b[43m*\u001b[49m\u001b[43mkwargs\u001b[49m\u001b[43m)\u001b[49m\n",
+      "\u001b[36mFile \u001b[39m\u001b[32m/usr/lib/python3/dist-packages/gpiozero/devices.py:552\u001b[39m, in \u001b[36mGPIODevice.__init__\u001b[39m\u001b[34m(self, pin, pin_factory)\u001b[39m\n\u001b[32m    550\u001b[39m     \u001b[38;5;28;01mraise\u001b[39;00m GPIOPinMissing(\u001b[33m'\u001b[39m\u001b[33mNo pin given\u001b[39m\u001b[33m'\u001b[39m)\n\u001b[32m    551\u001b[39m \u001b[38;5;66;03m# Check you can reserve *before* constructing the pin\u001b[39;00m\n\u001b[32m--> \u001b[39m\u001b[32m552\u001b[39m \u001b[38;5;28;43mself\u001b[39;49m\u001b[43m.\u001b[49m\u001b[43mpin_factory\u001b[49m\u001b[43m.\u001b[49m\u001b[43mreserve_pins\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mpin\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m    553\u001b[39m pin = \u001b[38;5;28mself\u001b[39m.pin_factory.pin(pin)\n\u001b[32m    554\u001b[39m \u001b[38;5;28mself\u001b[39m._pin = pin\n",
+      "\u001b[36mFile \u001b[39m\u001b[32m/usr/lib/python3/dist-packages/gpiozero/pins/__init__.py:88\u001b[39m, in \u001b[36mFactory.reserve_pins\u001b[39m\u001b[34m(self, requester, *names)\u001b[39m\n\u001b[32m     86\u001b[39m     reserver = reserver_ref()\n\u001b[32m     87\u001b[39m     \u001b[38;5;28;01mif\u001b[39;00m reserver \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m \u001b[38;5;129;01mand\u001b[39;00m requester._conflicts_with(reserver):\n\u001b[32m---> \u001b[39m\u001b[32m88\u001b[39m         \u001b[38;5;28;01mraise\u001b[39;00m GPIOPinInUse(\n\u001b[32m     89\u001b[39m             \u001b[33mf\u001b[39m\u001b[33m'\u001b[39m\u001b[33mpin \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mpin.name\u001b[38;5;132;01m}\u001b[39;00m\u001b[33m is already in use by \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mreserver\u001b[38;5;132;01m!r}\u001b[39;00m\u001b[33m'\u001b[39m)\n\u001b[32m     90\u001b[39m \u001b[38;5;28mself\u001b[39m._reservations[pin].append(ref(requester))\n",
+      "\u001b[31mGPIOPinInUse\u001b[39m: pin GPIO27 is already in use by <gpiozero.DigitalOutputDevice object on pin GPIO27, active_high=True, is_active=True>"
+     ]
+    }
+   ],
    "source": [
     "# 初始化代码，仅能执行一次\n",
     "\n",
@@ -220,7 +240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 15,
    "id": "835487ee-01db-45c6-b5ce-598b7c3687dc",
    "metadata": {},
    "outputs": [],
@@ -243,7 +263,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 16,
    "id": "1b10c732-10b6-412e-a1c6-cf4c384aa18e",
    "metadata": {},
    "outputs": [],
@@ -353,7 +373,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 4,
    "id": "4a6b1c80-ba03-4c66-a9b0-765b1f425cda",
    "metadata": {},
    "outputs": [
@@ -362,9 +382,7 @@
      "output_type": "stream",
      "text": [
       "/usr/lib/python3/dist-packages/gpiozero/input_devices.py:852: PWMSoftwareFallback: For more accurate readings, use the pigpio pin factory.See https://gpiozero.readthedocs.io/en/stable/api_input.html#distancesensor-hc-sr04 for more info\n",
-      "  warnings.warn(PWMSoftwareFallback(\n",
-      "/usr/lib/python3/dist-packages/gpiozero/input_devices.py:975: DistanceSensorNoEcho: no echo received\n",
-      "  warnings.warn(DistanceSensorNoEcho('no echo received'))\n"
+      "  warnings.warn(PWMSoftwareFallback(\n"
      ]
     }
    ],
@@ -381,7 +399,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 5,
    "id": "b7c022e3-bfd1-40f1-b906-23885f498e81",
    "metadata": {},
    "outputs": [
@@ -389,7 +407,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Distance: 100.0 cm\n"
+      "Distance: 60.4 cm\n"
      ]
     }
    ],
